--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-    "name": "FireGold-BOT",
-    "version": "1.0.0",
-    "description": "Official source code of Pokémon FireGold Helper bot.",
-    "main": "index.js",
-    "scripts": {
-        "start": "node index.js"
-    },
-    "engines": {
-        "node": "16.x"
-    },
-    "license": "ISC",
-    "dependencies": {
-        "@akarui/aoi.music": "^1.2.5",
-        "aoi.js": "^5.5.0",
-        "express": "^4.18.2"
-    }
+  "name": "FireGold-BOT",
+  "version": "0.3",
+  "description": "Official source code of Pokémon FireGold Helper bot.",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@types/node": "^18.0.6",
+    "aoi.js": "^6.0.3",
+    "express": "^4.18.2",
+    "node-fetch": "^3.2.6"
+  }
 }
